--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <link rel="stylesheet" href="./bootstrap-5.2.1-dist/css/bootstrap.css">
+    <title>MyPersonalSite_index</title>
 </head>
 <body>
-    <h1>My name is Haochen Ye</h1>
-    
+    <script src="./bootstrap-5.2.1-dist/js/bootstrap.js"></script>
+ 
+    <nav class="navbar fixed-top navbar-expand-lg bg-dark navbar-dark">
+        <div class="container-fluid">
+            <a class ="navbar-brand" href="#">MyPersonalSite</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link  fs-5 active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link  fs-5" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link  fs-5" href="contact.html">Contacts</a>
+                    </li>
+                </ul>
+            </div>  
+        </div>
+    </nav>
+    <div class="container-fluid  mt-5 pt-3 position-relative border-bottom border-dark">
+        <h1 class="text-center ">My Personal Site Haochen </h1>
+    </div>
+    <div class="container-fluid bg-dark position-relative">
+        <img src="bb.png" class="img-fluid" alt="sampleImg">
+
+    </div>
+
+   
 </body>
 </html>
