--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
         </ul>
         <a href=""></a>
     </div>
-    <div class="container-md  mt-5 pt-3 position-relative">
-        <a href="" class="fs-4 fw-bold"></a>
+    <div class="container-md  mt-5 pt-3 position-relative text-center ">
+        <a href="https://github.com/Leafyhc/Leafyhc.github.io.git" class="fs-4 fw-bold text-decoration-none" >Personal Site</a>
     </div>
 </body>
 </html>
