--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <a href=""></a>
     </div>
     <div class="container-md  mt-5 pt-3 position-relative text-center ">
-        <a href="https://github.com/Leafyhc/Leafyhc.github.io.git" class="fs-4 fw-bold text-decoration-none" >Personal Site</a>
+        <a href="https://github.com/Leafyhc/Leafyhc.github.io.git" class="fs-4 fw-bold text-decoration-none" target="_blank">Personal Site</a>
     </div>
 </body>
 </html>
