--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container-fluid  mt-5 pt-3 position-relative border-bottom border-dark">
         <h1 class="text-center ">My Personal Site Haochen </h1>
     </div>
-    <div class="container-fluid bg-dark position-relative">
+    <div class="container-sm bg-dark position-relative">
         <img src="bb.png" class="img-fluid" alt="sampleImg">
 
     </div>
